Kubernets confs/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  ports:
  - port: 5432
    name: postgres
  clusterIP: None
  selector:
    app: db

---

#apiVersion: v1
#kind: Service
#metadata:
#  name: web
#spec:
#  type: LoadBalancer  # Adding type: LoadBalancer here
#  ports:
#  - port: 80           # Exposing port 80 for HTTP traffic
#    targetPort: 3000
#  selector:
#    app: web

apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  type: NodePort  
  ports:
  - protocol: TCP
    port: 80           # Exposing port 80 for HTTP traffic
    targetPort: 3000
    nodePort: 30007
  selector:
    app: web
